--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,5 +1,5 @@
-<div data-controller="empty" class="weui-panel is-box is-borderless">
-  <div class="weui-panel__hd has-block-space-between">
+<div data-controller="empty" class="box is-padding-less mx-3">
+  <div class="box-header">
     <div>
       <i class="fa-solid fa-fw fa-store has-text-primary"></i>
       <span><%= t('factory.admin.title') %></span>
@@ -9,26 +9,24 @@
       <span>预览商店</span>
     <% end %>
   </div>
-  <div class="weui-panel__bd">
-    <div class="columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
-      <%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'column has-column-centered') do %>
-        <div class="has-text-primary">
-          <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
-        </div>
-        <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.product_taxons.index.title') %></div>
-      <% end %>
-      <%= link_to({ controller: 'factory/admin/scenes' }, class: 'column has-column-centered') do %>
-        <div class="has-text-primary">
-          <i class="fa-solid fa-fw fa-xl fa-lightbulb"></i>
-        </div>
-        <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.scenes.index.title') %></div>
-      <% end %>
-      <%= link_to({ controller: 'factory/admin/brands' }, class: 'column has-column-centered') do %>
-        <div class="has-text-primary">
-          <i class="fa-solid fa-fw fa-xl fa-copyright"></i>
-        </div>
-        <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.brands.index.title') %></div>
-      <% end %>
-    </div>
+  <div class="box-body columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
+    <%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'column has-column-centered') do %>
+      <div class="has-text-primary">
+        <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
+      </div>
+      <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.product_taxons.index.title') %></div>
+    <% end %>
+    <%= link_to({ controller: 'factory/admin/scenes' }, class: 'column has-column-centered') do %>
+      <div class="has-text-primary">
+        <i class="fa-solid fa-fw fa-xl fa-lightbulb"></i>
+      </div>
+      <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.scenes.index.title') %></div>
+    <% end %>
+    <%= link_to({ controller: 'factory/admin/brands' }, class: 'column has-column-centered') do %>
+      <div class="has-text-primary">
+        <i class="fa-solid fa-fw fa-xl fa-copyright"></i>
+      </div>
+      <div class="has-text-grey size-7 mt-1"><%= t('factory.admin.brands.index.title') %></div>
+    <% end %>
   </div>
 </div>
