--- a/app/views/factory/admin/production_plans/_actions.html.erb
+++ b/app/views/factory/admin/production_plans/_actions.html.erb
@@ -1,12 +1,12 @@
-<%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
+<%= link_to({ action: 'edit', id: model.id }, class: 'cell') do %>
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit.title') %></span>
 <% end %>
-<%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
+<%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'cell weui-actionsheet__cell_warn' }) do %>
   <i class="fa-solid fa-trash"></i>
   <span><%= t('.destroy.title') %></span>
 <% end %>
-<%= link_to({ controller: 'production_items', production_plan_id: model.id }, class: 'weui-actionsheet__cell') do %>
+<%= link_to({ controller: 'production_items', production_plan_id: model.id }, class: 'cell') do %>
   <i class="fa-regular fa-list-timeline"></i>
   <span><%= t('factory.admin.production_items.index.title') %></span>
   <span class="has-text-grey">（<%= model.production_items_count %>）</span>
