--- a/app/views/factory/mem/produce_plans/_actions.html.erb
+++ b/app/views/factory/mem/produce_plans/_actions.html.erb
@@ -1,8 +1,8 @@
-<%= link_to({ controller: 'productions', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'weui-actionsheet__cell') do %>
+<%= link_to({ controller: 'productions', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'cell') do %>
   <i class="fa-solid fa-hand"></i>
   <span>自己点餐</span>
 <% end %>
-<%= link_to({ controller: 'carts', action: 'list', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'weui-actionsheet__cell weui-actionsheet__cell_warn') do %>
+<%= link_to({ controller: 'carts', action: 'list', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'cell weui-actionsheet__cell_warn') do %>
   <i class="fa-solid fa-hand-holding"></i>
   <span>帮同事点餐</span>
 <% end %>
