--- a/app/views/factory/our/productions/_list/_actions.html.erb
+++ b/app/views/factory/our/productions/_list/_actions.html.erb
@@ -1,4 +1,4 @@
-<%= link_to({ action: 'members', production_id: model.production_id, **params.permit(:produce_on, :scene_id) }, class: 'weui-actionsheet__cell has-block-space-between') do %>
+<%= link_to({ action: 'members', production_id: model.production_id, **params.permit(:produce_on, :scene_id) }, class: 'cell has-block-space-between') do %>
   <span class="is-several">
     <%= image_tag model.production.product.logo, class: 'image is-24x24' if model.production.product.logo.attached? %>
     <span><%= model.production.name %></span>
