--- a/app/views/factory/productions/_actions.html+phone.erb
+++ b/app/views/factory/productions/_actions.html+phone.erb
@@ -1,5 +1,5 @@
 <div
-  class="weui-actionsheet__cell"
+  class="cell"
   data-controller="mask wx-share"
   data-mask-id-value="mask"
   data-wx-share-title-value="<%= @production.name %>"
