--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -9,7 +9,7 @@
       <span>预览商店</span>
     <% end %>
   </div>
-  <div class="box-body columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
+  <div class="columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
     <%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'column has-column-centered') do %>
       <div class="has-text-primary">
         <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
