--- a/app/views/factory/admin/products/_edit_form.html+phone.erb
+++ b/app/views/factory/admin/products/_edit_form.html+phone.erb
@@ -1,11 +1,7 @@
 <%= form_with theme: 'weui', model: model, scope: model_name, url: { action: 'update' }, state: 'redirect' do |f| %>
-  <div class="weui-form__control-area">
-    <div class="weui-cells__group weui-cells__group_form">
-      <div class="weui-cells">
-        <%= f.collection_select :product_taxon_id, @product_taxons, :id, :name %>
-        <%= render partial: 'form', locals: { f: f } %>
-      </div>
-    </div>
+  <div class="form-fields">
+    <%= f.collection_select :product_taxon_id, @product_taxons, :id, :name %>
+    <%= render partial: 'form', locals: { f: f } %>
   </div>
   <%= f.submit %>
 <% end %>
