--- a/app/views/factory/admin/provides/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_thead.html.erb
@@ -1,3 +1,4 @@
+<th><%= Factory::Provide.human_attribute_name(:name) %></th>
 <th><%= Factory::Provide.human_attribute_name(:provider_id) %></th>
 <th></th>
 <th></th>
