--- a/app/views/factory/admin/produce_plans/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/produce_plans/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= link_to({ action: 'products', id: model.id }, aria: { label: t('factory.admin.produce_plans.products.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-cart-flatbed has-text-success"></i>
       <% end %>
