--- a/app/views/factory/admin/product_taxons/_base/_factory_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_factory_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-plus has-text-primary"></i>
       <% end %>
