--- a/app/views/factory/admin/product_taxons/_import/_index_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_import/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="tree-remote show" data-tree-remote-target="item" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= button_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.products.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
