--- a/app/views/factory/admin/production_items/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <button class="button is-small is-rounded is-light" data-controller="print" data-print-url-value="<%= url_for(controller: 'production_items', action: 'pdf', id: model.id) %>" data-action="print#doPrint">
         <i class="fa-solid fa-print has-text-success"></i>
       </button>
