--- a/app/views/factory/admin/products/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide" data-id="<%= model.id %>">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= button_to({ action: 'show', id: model.id, product_taxon_id: model.product_taxon_id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
