--- a/app/views/factory/admin/purchase_items/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/purchase_items/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= button_to({ action: 'update', id: model.id }, method: :patch, params: { item: { purchase_status: 'received' } }, aria: { label: t('.update.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-tractor has-text-success"></i>
       <% end if ['init', nil].include?(model.purchase_status) %>
