--- a/app/views/factory/admin/scenes/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/scenes/_base/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <div data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" class="visibility-hidden">
       <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-solid fa-hammer"></i>
         <span class="pl-1"><%= t('.produce_plans.index.title') %></span>
