--- a/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_taxon/_index_tbody.html.erb
@@ -7,25 +7,25 @@
 </td>
 <td class="has-inner-table">
   <% model.parts.each do |part| %>
-    <%= link_to({ controller: 'productions', action: 'show', product_id: part.product_id, id: part.id }, data: { turbo_frame: 'modal' }, class: 'tag is-info') do %>
+    <%= button_to({ controller: 'productions', action: 'show', product_id: part.product_id, id: part.id }, class: 'tag is-info') do %>
       <span><%= part.name %></span>
       <span class="pl-1"><%= part.price.to_money.format.html_safe %></span>
     <% end %>
   <% end %>
-  <%= link_to({ action: 'part', product_id: model.product_id, id: model.id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.part.title') }, style: 'visibility: hidden') do %>
+  <%= button_to({ action: 'part', product_id: model.product_id, id: model.id }, data: { show_target: 'item' }, aria: { label: t('factory.admin.productions.part.title') }, class: 'visibility-hidden') do %>
     <i class="fa-solid fa-sm fa-cube has-text-grey"></i>
   <% end %>
 </td>
 <td style="--money-width: <%= model.max_indent %>ch">
   <p>
     <span><%= model.cost_price.to_money.format.html_safe %></span>
-    <%= link_to({ action: 'cost', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.cost.title') }, style: 'visibility: hidden') do %>
+    <%= button_to({ action: 'cost', id: model.id, product_id: model.product_id }, data: { show_target: 'item' }, aria: { label: t('factory.admin.productions.cost.title') }, class: 'visibility-hidden') do %>
       <i class="fa-solid fa-fw fa-sm fa-tags has-text-grey"></i>
     <% end %>
   </p>
   <p>
     <span><%= model.profit_price.to_money.format.html_safe %></span>
-    <%= link_to({ action: 'price', id: model.id, product_id: model.product_id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.price.title') }, style: 'visibility: hidden') do %>
+    <%= button_to({ action: 'price', id: model.id, product_id: model.product_id }, data: { show_target: 'item' }, aria: { label: t('factory.admin.productions.price.title') }, class: 'visibility-hidden') do %>
       <i class="fa-solid fa-fw fa-sm fa-tags has-text-grey"></i>
     <% end %>
   </p>
