--- a/app/views/factory/admin/provides/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_tr.html.erb
@@ -5,6 +5,9 @@
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
+      <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-pencil has-text-link"></i>
+      <% end %>
     </div>
   </td>
 </tr>
