--- a/app/views/factory/admin/provides/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_tr.html.erb
@@ -2,6 +2,10 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm'), turbo_scroll: true } }) do %>
+        <i class="fa-solid fa-trash has-text-danger"></i>
+        <span class="pl-1"><%= t('.destroy.title') %></span>
+      <% end %>
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
