--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -10,7 +10,7 @@
   <p><%= @count_hash[model.id] %></p>
 </td>
 <td>
-  <%= link_to({ controller: 'provides', product_taxon_id: model.id }, aria: { label: t('.provides.index.title') }) do %>
+  <%= link_to({ controller: 'taxon/provides', product_taxon_id: model.id }, aria: { label: t('.taxon.provides.index.title') }) do %>
     <span><%= model.provides_count %></span>
   <% end %>
 </td>
