refactor show table

--- a/app/views/factory/admin/addresses/_show_table.html.erb
+++ b/app/views/factory/admin/addresses/_show_table.html.erb
@@ -1,24 +1,24 @@
-<tr>
-  <td><%= Address.human_attribute_name(:area) %></td>
-  <td><%= @address.area %></td>
-</tr>
-<tr>
-  <td><%= Address.human_attribute_name(:detail) %></td>
-  <td><%= @address.detail %></td>
-</tr>
-<tr>
-  <td><%= Address.human_attribute_name(:contact) %></td>
-  <td><%= @address.contact %></td>
-</tr>
-<tr>
-  <td><%= Address.human_attribute_name(:tel) %></td>
-  <td><%= @address.tel %></td>
-</tr>
-<tr>
-  <td><%= Address.human_attribute_name(:post_code) %></td>
-  <td><%= @address.post_code %></td>
-</tr>
-<tr>
-  <td><%= Address.human_attribute_name(:source) %></td>
-  <td><%= @address.source %></td>
-</tr>
+<div>
+  <dt><%= Address.human_attribute_name(:area) %></dt>
+  <dd><%= @address.area %></dd>
+</div>
+<div>
+  <dt><%= Address.human_attribute_name(:detail) %></dt>
+  <dd><%= @address.detail %></dd>
+</div>
+<div>
+  <dt><%= Address.human_attribute_name(:contact) %></dt>
+  <dd><%= @address.contact %></dd>
+</div>
+<div>
+  <dt><%= Address.human_attribute_name(:tel) %></dt>
+  <dd><%= @address.tel %></dd>
+</div>
+<div>
+  <dt><%= Address.human_attribute_name(:post_code) %></dt>
+  <dd><%= @address.post_code %></dd>
+</div>
+<div>
+  <dt><%= Address.human_attribute_name(:source) %></dt>
+  <dd><%= @address.source %></dd>
+</div>
