--- a/app/views/factory/admin/fits/_show_table.html.erb
+++ b/app/views/factory/admin/fits/_show_table.html.erb
@@ -1,16 +1,16 @@
-<tr>
-  <td><%= Factory::Fit.human_attribute_name(:part_brand_id) %></td>
-  <td><%= @fit.part_brand_id %></td>
-</tr>
-<tr>
-  <td><%= Factory::Fit.human_attribute_name(:part_serial_id) %></td>
-  <td><%= @fit.part_serial_id %></td>
-</tr>
-<tr>
-  <td><%= Factory::Fit.human_attribute_name(:part_product_id) %></td>
-  <td><%= @fit.part_product_id %></td>
-</tr>
-<tr>
-  <td><%= Factory::Fit.human_attribute_name(:part_production_id) %></td>
-  <td><%= @fit.part_production_id %></td>
-</tr>
+<div>
+  <dt><%= Factory::Fit.human_attribute_name(:part_brand_id) %></dt>
+  <dd><%= @fit.part_brand_id %></dd>
+</div>
+<div>
+  <dt><%= Factory::Fit.human_attribute_name(:part_serial_id) %></dt>
+  <dd><%= @fit.part_serial_id %></dd>
+</div>
+<div>
+  <dt><%= Factory::Fit.human_attribute_name(:part_product_id) %></dt>
+  <dd><%= @fit.part_product_id %></dd>
+</div>
+<div>
+  <dt><%= Factory::Fit.human_attribute_name(:part_production_id) %></dt>
+  <dd><%= @fit.part_production_id %></dd>
+</div>
