--- a/app/views/factory/admin/product_parts/_show_table.html.erb
+++ b/app/views/factory/admin/product_parts/_show_table.html.erb
@@ -1,12 +1,12 @@
-<tr>
-  <td><%= ProductPart.human_attribute_name(:part_taxon_id) %></td>
-  <td><%= @product_part.part_taxon_id %></td>
-</tr>
-<tr>
-  <td><%= ProductPart.human_attribute_name(:part_id) %></td>
-  <td><%= @product_part.part_id %></td>
-</tr>
-<tr>
-  <td><%= ProductPart.human_attribute_name(:default) %></td>
-  <td><%= @product_part.default %></td>
-</tr>
+<div>
+  <dt><%= ProductPart.human_attribute_name(:part_taxon_id) %></dt>
+  <dd><%= @product_part.part_taxon_id %></dd>
+</div>
+<div>
+  <dt><%= ProductPart.human_attribute_name(:part_id) %></dt>
+  <dd><%= @product_part.part_id %></dd>
+</div>
+<div>
+  <dt><%= ProductPart.human_attribute_name(:default) %></dt>
+  <dd><%= @product_part.default %></dd>
+</div>
