--- a/app/views/factory/admin/provides/_show_table.html.erb
+++ b/app/views/factory/admin/provides/_show_table.html.erb
@@ -1,4 +1,4 @@
-<tr>
-  <td><%= Factory::Provide.human_attribute_name(:provider_id) %></td>
-  <td><%= @provide.provider_id %></td>
-</tr>
+<div>
+  <dt><%= Factory::Provide.human_attribute_name(:provider_id) %></dt>
+  <dd><%= @provide.provider_id %></dd>
+</div>
