--- a/app/views/factory/panel/factory_taxons/_show_table.html.erb
+++ b/app/views/factory/panel/factory_taxons/_show_table.html.erb
@@ -1,4 +1,4 @@
-<tr>
-  <td><%= Factory::FactoryTaxon.human_attribute_name(:name) %></td>
-  <td><%= @factory_taxon.name %></td>
-</tr>
+<div>
+  <dt><%= Factory::FactoryTaxon.human_attribute_name(:name) %></dt>
+  <dd><%= @factory_taxon.name %></dd>
+</div>
