--- a/app/views/factory/panel/unifiers/_show_table.html.erb
+++ b/app/views/factory/panel/unifiers/_show_table.html.erb
@@ -1,8 +1,8 @@
-<tr>
-  <td><%= Factory::Unifier.human_attribute_name(:name) %></td>
-  <td><%= @unifier.name %></td>
-</tr>
-<tr>
-  <td><%= Factory::Unifier.human_attribute_name(:code) %></td>
-  <td><%= @unifier.code %></td>
-</tr>
+<div>
+  <dt><%= Factory::Unifier.human_attribute_name(:name) %></dt>
+  <dd><%= @unifier.name %></dd>
+</div>
+<div>
+  <dt><%= Factory::Unifier.human_attribute_name(:code) %></dt>
+  <dd><%= @unifier.code %></dd>
+</div>
