--- a/app/views/factory/admin/product_hosts/_show_table.html.erb
+++ b/app/views/factory/admin/product_hosts/_show_table.html.erb
@@ -1,30 +1,30 @@
-<tr>
-  <td><%= Factory::Product.human_attribute_name(:name) %></td>
-  <td><%= @product.name %></td>
-</tr>
-<tr>
-  <td><%= Factory::Product.human_attribute_name(:qr_prefix) %></td>
-  <td><%= @product.qr_prefix %></td>
-</tr>
-<tr>
-  <td><%= Factory::Product.human_attribute_name(:description) %></td>
-  <td><%= @product.description %></td>
-</tr>
-<tr>
-  <td><%= Factory::Product.human_attribute_name(:covers) %></td>
-  <td>
+<div>
+  <dt><%= Factory::Product.human_attribute_name(:name) %></dt>
+  <dd><%= @product.name %></dd>
+</div>
+<div>
+  <dt><%= Factory::Product.human_attribute_name(:qr_prefix) %></dt>
+  <dd><%= @product.qr_prefix %></dd>
+</div>
+<div>
+  <dt><%= Factory::Product.human_attribute_name(:description) %></dt>
+  <dd><%= @product.description %></dd>
+</div>
+<div>
+  <dt><%= Factory::Product.human_attribute_name(:covers) %></dt>
+  <dd>
     <div class="flex">
       <%= render 'com/attachments/list', target: @product.covers %>
     </div>
-  </td>
-</tr>
-<tr>
-  <td><%= Factory::Product.human_attribute_name(:images) %></td>
-  <td>
+  </dd>
+</div>
+<div>
+  <dt><%= Factory::Product.human_attribute_name(:images) %></dt>
+  <dd>
     <div class="flex">
     <% @product.images.each do |image| %>
       <%= image_tag image, class: 'image is-128x128 mr-4' %>
     <% end %>
     </div>
-  </td>
-</tr>
+  </dd>
+</div>
