--- a/app/views/factory/admin/product_part_taxons/_show_table.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_show_table.html.erb
@@ -1,12 +1,12 @@
-<tr>
-  <td><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></td>
-  <td><%= @product_part_taxon.name %></td>
-</tr>
-<tr>
-  <td><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></td>
-  <td><%= @product_part_taxon.min_select %></td>
-</tr>
-<tr>
-  <td><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></td>
-  <td><%= @product_part_taxon.max_select %></td>
-</tr>
+<div>
+  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></dt>
+  <dd><%= @product_part_taxon.name %></dd>
+</div>
+<div>
+  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></dt>
+  <dd><%= @product_part_taxon.min_select %></dd>
+</div>
+<div>
+  <dt><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></dt>
+  <dd><%= @product_part_taxon.max_select %></dd>
+</div>
