--- a/app/views/factory/admin/stock_logs/_show_table.html.erb
+++ b/app/views/factory/admin/stock_logs/_show_table.html.erb
@@ -1,16 +1,16 @@
-<tr>
-  <td><%= Factory::StockLog.human_attribute_name(:title) %></td>
-  <td><%= @stock_log.title %></td>
-</tr>
-<tr>
-  <td><%= Factory::StockLog.human_attribute_name(:amount) %></td>
-  <td><%= @stock_log.amount.to_human %></td>
-</tr>
-<tr>
-  <td><%= Factory::StockLog.human_attribute_name(:source_type) %></td>
-  <td><%= @stock_log.source_type %></td>
-</tr>
-<tr>
-  <td><%= Factory::StockLog.human_attribute_name(:source_id) %></td>
-  <td><%= @stock_log.source_id %></td>
-</tr>
+<div>
+  <dt><%= Factory::StockLog.human_attribute_name(:title) %></dt>
+  <dd><%= @stock_log.title %></dd>
+</div>
+<div>
+  <dt><%= Factory::StockLog.human_attribute_name(:amount) %></dt>
+  <dd><%= @stock_log.amount.to_human %></dd>
+</div>
+<div>
+  <dt><%= Factory::StockLog.human_attribute_name(:source_type) %></dt>
+  <dd><%= @stock_log.source_type %></dd>
+</div>
+<div>
+  <dt><%= Factory::StockLog.human_attribute_name(:source_id) %></dt>
+  <dd><%= @stock_log.source_id %></dd>
+</div>
