--- a/app/views/factory/panel/scenes/_show_table.html.erb
+++ b/app/views/factory/panel/scenes/_show_table.html.erb
@@ -1,28 +1,28 @@
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:title) %></td>
-  <td><%= @scene.title %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:book_start_days) %></td>
-  <td><%= @scene.book_start_days %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:book_start_at) %></td>
-  <td><%= @scene.book_start_at.to_fs(:time) %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:book_finish_days) %></td>
-  <td><%= @scene.book_finish_days %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:book_finish_at) %></td>
-  <td><%= @scene.book_finish_at.to_fs(:time) %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></td>
-  <td><%= @scene.deliver_start_at.to_fs(:time) %></td>
-</tr>
-<tr>
-  <td><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></td>
-  <td><%= @scene.deliver_finish_at.to_fs(:time) %></td>
-</tr>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:title) %></dt>
+  <dd><%= @scene.title %></dd>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:book_start_days) %></dt>
+  <dd><%= @scene.book_start_days %></dd>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:book_start_at) %></dt>
+  <dd><%= @scene.book_start_at.to_fs(:time) %></dt>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:book_finish_days) %></dt>
+  <dd><%= @scene.book_finish_days %></dd>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:book_finish_at) %></dt>
+  <dd><%= @scene.book_finish_at.to_fs(:time) %></dt>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></dt>
+  <dd><%= @scene.deliver_start_at.to_fs(:time) %></dt>
+</div>
+<div>
+  <dt><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></dt>
+  <dd><%= @scene.deliver_finish_at.to_fs(:time) %></dt>
+</div>
