--- a/app/views/factory/our/productions/_members/_production.html.erb
+++ b/app/views/factory/our/productions/_members/_production.html.erb
@@ -1,10 +1,10 @@
-<div class="weui-media-box weui-media-box_appmsg">
-  <div data-controller="empty" class="weui-media-box__hd">
+<div class="media">
+  <div data-controller="empty" class="media-left">
     <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true) do %>
       <%= image_tag model.product.logo, class: 'image is-64x64' %>
     <% end if model.product.logo.attached? %>
   </div>
-  <div class="weui-media-box__bd">
+  <div class="media-content">
     <%= link_to({ controller: 'productions', action: 'show', id: model.id }, state: 'enter', text: true, class: 'flex flex-direction-column') do %>
       <h4 class="weui-media-box__title"><%= model.name %></h4>
       <p class="weui-media-box__desc pt-0">
@@ -28,7 +28,7 @@
       </div>
     <% end %>
   </div>
-  <div class="weui-media-box__ft">
+  <div class="media-right as-x">
     <%= button_to({ controller: 'productions', action: 'list', id: model.id, **params.permit(:produce_on, :scene_id) }, class: 'button is-borderless has-column-centered justify-content-space-evenly', style: 'height: 4em') do %>
       <i class="fa-solid fa-lg fa-repeat"></i>
       <span>切换</span>
