--- a/app/views/factory/produce_plans/_overview/_raw_scene.html.erb
+++ b/app/views/factory/produce_plans/_overview/_raw_scene.html.erb
@@ -1,5 +1,5 @@
-<div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__bd">
+<div class="media">
+  <div class="media-content">
     <div class="flex justify-content-center">
       <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
       <span><%= scene.title %></span>
