--- a/app/views/factory/produce_plans/_overview/_scene.html.erb
+++ b/app/views/factory/produce_plans/_overview/_scene.html.erb
@@ -14,8 +14,8 @@
     </div>
   </div>
   <div class="weui-panel__bd">
-    <div class="weui-media-box weui-media-box_appmsg">
-      <div class="weui-media-box__bd">
+    <div class="media">
+      <div class="media-content">
         <p class="size-7 has-text-centered">
           <span>预定时间：</span>
           <span class="<%= scene.bookable?(@produce_on) ? 'has-text-success' : 'has-text-danger' %>">
