--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -1,6 +1,6 @@
-<div class="weui-media-box weui-media-box_appmsg">
+<div class="media">
   <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__hd') do %>
-    <%= image_tag model.logo, class: 'weui-media-box__thumb' if model.logo.attached? %>
+    <%= image_tag model.logo, class: 'image is-64x64' if model.logo.attached? %>
   <% end %>
   <%= link_to({ action: 'show', id: model.id }, text: true, class: 'weui-media-box__bd flex flex-direction-column') do %>
     <h4 class="weui-media-box__title"><%= model.name %></h4>
