--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -1,6 +1,6 @@
 <div class="weui-media-box weui-media-box_appmsg is-box" data-controller="common" id="production_<%= model.id %>">
   <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', data: { controller: 'empty' }, class: 'weui-media-box__hd as-logo') do %>
-    <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
+    <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
   <% end %>
   <div class="weui-media-box__bd as-body">
     <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', class: 'weui-media-box__title') do %>
