--- a/app/views/factory/my/productions/_index/_custom.html.erb
+++ b/app/views/factory/my/productions/_index/_custom.html.erb
@@ -1,8 +1,8 @@
-<div class="weui-media-box weui-media-box_appmsg" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
-  <div class="weui-media-box__hd">
-    <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' if custom.product.logo.attached? %>
+<div class="media" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
+  <div class="media-left">
+    <%= image_tag custom.product.logo, class: 'image is-64x64' if custom.product.logo.attached? %>
   </div>
-  <div class="weui-media-box__bd">
+  <div class="media-content">
     <h4 class="weui-media-box__title"><%= custom.product.name %></h4>
     <p class="weui-media-box__desc">
       <% custom.parts.each do |part| %>
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </div>
-  <div class="weui-media-box__ft" data-swipe-target="open">
+  <div class="media-right as-x" data-swipe-target="open">
     <%= link_to '删除', my_custom_path(custom), method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'weui-btn weui-btn_mini weui-btn_warn' %>
   </div>
 </div>
