--- a/app/views/factory/our/carts/_index/_organ.html.erb
+++ b/app/views/factory/our/carts/_index/_organ.html.erb
@@ -1,8 +1,8 @@
-<div class="weui-media-box weui-media-box_appmsg">
-  <div data-controller="empty" class="weui-media-box__hd">
-    <%= image_tag provider[0].logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if provider[0].logo.attached? %>
+<div class="media">
+  <div data-controller="empty" class="media-left">
+    <%= image_tag provider[0].logo.variant(resize_to_limit: [150, 150]), class: 'image is-64x64' if provider[0].logo.attached? %>
   </div>
-  <div class="weui-media-box__bd">
+  <div class="media-content">
     <strong class="weui-media-box__title"><%= provider[0].name %></strong>
     <p><%= provider[0].address %></p>
     <p></p>
