--- a/app/views/factory/our/productions/_members/_index_item_actions.html+phone.erb
+++ b/app/views/factory/our/productions/_members/_index_item_actions.html+phone.erb
@@ -1,6 +1,6 @@
-<div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__bd">
+<div class="media">
+  <div class="media-content">
     <%= yield %>
   </div>
-  <div class="weui-media-box__ft"></div>
+  <div class="media-right as-x"></div>
 </div>
