--- a/app/views/factory/productions/_rent/_production.html+phone.erb
+++ b/app/views/factory/productions/_rent/_production.html+phone.erb
@@ -1,6 +1,6 @@
 <div class="weui-media-box weui-media-box_appmsg is-box" id="production_<%= model.id %>">
   <%= link_to({ action: 'show', id: model.id }, state: 'enter', text: true, class: 'weui-media-box__hd as-logo') do %>
-    <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
+    <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
   <% end %>
   <div class="weui-media-box__bd as-body">
     <%= link_to({ action: 'show', id: model.id }, state: 'enter', text: true, class: 'weui-media-box__title pb-1') do %>
